--- a/TALEND_DEMO/.settings/org.talend.repository.prefs
+++ b/TALEND_DEMO/.settings/org.talend.repository.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+repository.project.branch=master
 repository.project.id=enc\:migration.token.encryption.key\:WdK+ej2DopF1mNJ11VnHLwmlVE6ua/i38j7lTabR4lASOamvcTMUjl4\=
